plugins {
    id 'org.jetbrains.intellij' version '0.4.9'
}

group 'com.ifengxue'
version '1.1.4'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.2.Final'
    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

intellij {
    version 'IC-2017.1'
    pluginName 'Jpa Support'
    updateSinceUntilBuild false
}
